# lua---opencv24

./: CMakeLists.txt  LuaTemplate.hpp  README.md  THTemplateGenerateTypes.hpp  THTemplateTypes.hpp  THpp.hpp  common.cpp  common.hpp  init.lua  opencv.cpp
generic/: THTemplateType.hpp  opencv.cpp
genericpp/: opencv.cpp
